--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <h3 class="h1 text-right"> TRADE YOUR PLAN</h3>
             </div>
             <div class="row text-center">
-                <div class="cardLarge row">
+                <div class="cardLarge row align-items-center justify-content-center">
                     <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="card p1 text-light mb-3">
                             <div class="h1 m-top text-info">
