--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </section>
     <!--Start Work-->
     <section id="work" class="py-5 reveal">
-        <div class="container">
+        <div class="container WorkContent">
             <h2 class="outHeading">
                 <span class="float-right px-2"> 
                     <strong>
