--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!--Landing page-->
     <section id="hero" class=" text-center  text-sm-start">
-        <nav class="navbar  fixed-top navbar-expand-lg navbar-transperant bg-transperant text-white">
+        <nav class="navbar container-fluid  fixed-top navbar-expand-lg navbar-transperant bg-transperant text-white">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,7 +134,7 @@
     </section>
     <!--Start Work-->
     <section id="work" class="py-5 reveal">
-        <div class="container WorkContent">
+        <div class="container WorkCont">
             <h2 class="outHeading">
                 <span class="float-right px-2"> 
                     <strong>
@@ -658,14 +658,14 @@
                             <p>
                                 &copy; البورصجى 2022
                             </p>
+                            <form class="icon">
+                                <a href="/" class="fa fa-facebook"></a>
+                                <a href="https://twitter.com/home" class="fa fa-twitter"></a>
+                                <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
+                                <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
+                            </form>
 
                         </div>
-                        <form class="icon">
-                            <a href="/" class="fa fa-facebook"></a>
-                            <a href="https://twitter.com/home" class="fa fa-twitter"></a>
-                            <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
-                            <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
-                        </form>
 
                     </div>
                 </div>
